--- a/Self writen code/KGE.ipynb
+++ b/Self writen code/KGE.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### VIP: have to test the model with more negative samples (as of now we generate only one -ve sample per +ve)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 462,
    "metadata": {},
@@ -507,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +528,46 @@
       "Iteration: 400 | Loss 0.051293373107910156\n",
       "Iteration: 500 | Loss 0.04837322235107422\n",
       "Iteration: 600 | Loss 0.05049324035644531\n",
-      "Iteration: 700 | Loss 0.04554939270019531\n"
+      "Iteration: 700 | Loss 0.04554939270019531\n",
+      "Iteration: 800 | Loss 0.049239158630371094\n",
+      "Iteration: 900 | Loss 0.05120849609375\n",
+      "Iteration: 1000 | Loss 0.04951190948486328\n",
+      "Iteration: 1100 | Loss 0.04836082458496094\n",
+      "Iteration: 1200 | Loss 0.04974174499511719\n",
+      "Iteration: 1300 | Loss 0.048087120056152344\n",
+      "Iteration: 1400 | Loss 0.04753589630126953\n",
+      "Iteration: 1500 | Loss 0.0517120361328125\n",
+      "Iteration: 1600 | Loss 0.04522228240966797\n",
+      "Iteration: 1700 | Loss 0.04702472686767578\n",
+      "Iteration: 0 | Loss 0.04784584045410156\n",
+      "Iteration: 100 | Loss 0.052008628845214844\n",
+      "Iteration: 200 | Loss 0.049826622009277344\n",
+      "Iteration: 300 | Loss 0.047736167907714844\n",
+      "Iteration: 400 | Loss 0.04853534698486328\n",
+      "Iteration: 500 | Loss 0.0474395751953125\n",
+      "Iteration: 600 | Loss 0.048343658447265625\n",
+      "Iteration: 700 | Loss 0.054862022399902344\n",
+      "Iteration: 800 | Loss 0.04715728759765625\n",
+      "Iteration: 900 | Loss 0.05355358123779297\n",
+      "Iteration: 1000 | Loss 0.04699230194091797\n",
+      "Iteration: 1100 | Loss 0.047484397888183594\n",
+      "Iteration: 1200 | Loss 0.045426368713378906\n",
+      "Iteration: 1300 | Loss 0.04487800598144531\n",
+      "Iteration: 1400 | Loss 0.04957008361816406\n",
+      "Iteration: 1500 | Loss 0.047438621520996094\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-50-0a1572a2af3a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m         \u001b[0mfalse_tail\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mretain_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m         \u001b[1;31m# calculate gradients = backward pass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[0ml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    305\u001b[0m                 \u001b[0mcreate_graph\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    306\u001b[0m                 inputs=inputs)\n\u001b[1;32m--> 307\u001b[1;33m         \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    308\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    309\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\torch\\autograd\\__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    154\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[0;32m    155\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 156\u001b[1;33m         allow_unreachable=True, accumulate_grad=True)  # allow_unreachable flag\n\u001b[0m\u001b[0;32m    157\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    158\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
